<resources>
    <string name="cyxbsmobile">掌上重邮</string>
    <string name="app_name">掌上重邮</string>
    <string name="community">社 区</string>
    <string name="help">邮 问</string>
    <string name="course">课 表</string>
    <string name="explore">发 现</string>
    <string name="my_page">我 的</string>
    <string name="now_week">本周</string>
    <string-array name="titles_weeks">
        <item>整学期</item>
        <item>第一周</item>
        <item>第二周</item>
        <item>第三周</item>
        <item>第四周</item>
        <item>第五周</item>
        <item>第六周</item>
        <item>第七周</item>
        <item>第八周</item>
        <item>第九周</item>
        <item>第十周</item>
        <item>第十一周</item>
        <item>第十二周</item>
        <item>第十三周</item>
        <item>第十四周</item>
        <item>第十五周</item>
        <item>第十六周</item>
        <item>第十七周</item>
        <item>第十八周</item>
        <item>第十九周</item>
        <item>第二十周</item>
        <item>第二十一周</item>
        <item>第二十二周</item>
        <item>第二十三周</item>
        <item>第二十四周</item>
        <item>第二十五周</item>
    </string-array>
    <string-array name="course_weekdays">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <string-array name="schedule_weekday">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>
    <string-array name="schedule_time">
        <item>8:00 ~ 9:40 am</item>
        <item>10:15 ~ 11:55 am</item>
        <item>2:00 ~ 3:40 pm</item>
        <item>4:15 ~ 5:55 pm</item>
        <item>7:00 ~ 8:40 pm</item>
        <item>8:50 ~ 10:30 pm</item>
    </string-array>
    <string-array name="no_schedule_sections">
        <item>1–2节</item>
        <item>3–4节</item>
        <item>5–6节</item>
        <item>7–8节</item>
        <item>9–10节</item>
        <item>11–12节</item>
    </string-array>
    <string-array name="no_schedule_week">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <string-array name="empty_buildings">
        <item>二教</item>
        <item>三教</item>
        <item>四教</item>
        <item>五教</item>
        <item>八教</item>
    </string-array>
    <string-array name="empty_sections">
        <item>1–2节</item>
        <item>3–4节</item>
        <item>5–6节</item>
        <item>7–8节</item>
        <item>9–10节</item>
        <item>11–12节</item>
    </string-array>
    <string-array name="exam_grade_tab_titles">
        <item>成绩</item>
        <item>考试安排</item>
        <item>补考安排</item>
    </string-array>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_about">关于</string>
    <string name="setting_show_mode">在课表上没课的地方显示备忘内容</string>
    <string name="setting_exit">退出当前账号</string>
    <string name="exam_detail_date">%1$s - %2$s</string>
    <string name="news_remind_hint">打开后将推送响应类型的消息</string>
    <string name="news_remind_comment">评论与回复</string>
    <string name="news_remind_like">点赞</string>
    <string-array name="community_tab_tiles">
        <item>热门</item>
        <item>动态</item>
        <item>资讯</item>
    </string-array>
    <string-array name="question_tab_titles">
        <item>全部</item>
        <item>学习</item>
        <item>生活</item>
        <item>情感</item>
    </string-array>
    <string name="error_text">加载失败</string>
    <string name="explore_portal">关于红岩</string>
    <string name="explore_map">重邮地图</string>
    <string name="explore_eat">吃什么</string>
    <string name="explore_around_food">周边美食</string>
    <string name="explore_electric">查电费</string>
    <string name="portal_title">红岩主页</string>
    <string name="portal_menu_share">分享链接</string>
    <string name="portal_menu_refresh">刷新页面</string>
    <string name="portal_menu_copy">复制链接</string>
    <string name="portal_open_with">用浏览器打开</string>
    <string name="map_activity_name">重邮地图</string>
    <string name="what_to_eat_activity_name">吃什么</string>
    <string name="surrounding_food_activity_name">周边美食</string>
    <string name="restaurant_default_intro">暂无本店简介</string>
    <string name="phone_permission_explanation">不给权限,我也没办法了,亲</string>
    <string name="send_comment_fail">发送失败</string>
    <string name="send_comment_fail_again">发送失败,请检查网络</string>
    <string name="send_comment_again">重新发送</string>
    <string name="placeholder_explore_restaurant_recommend">新鲜大盘牛肉, 肉多耐嚼, 值得拥有</string>
    <string name="placeholder_explore_restaurant_location">南岸区南山路99号(近崇文路), 在重庆邮电大学堕落街附近</string>
    <string name="news_load">下载附件</string>
    <string name="load_agree">确定</string>
    <string name="load_disagree">取消</string>
    <string name="loading">下载中,请稍后</string>
    <string name="load_open_file">下载成功,是否打开?</string>
    <string name="load_file_path">文件位于%1$s</string>
    <string name="load_failed">下载失败了~</string>
    <string name="specific_news_title">详情</string>
    <string name="activity_add_news_title">发表动态</string>
    <string name="add_news_edit_hint">点击输入文字...</string>
    <string name="erro">获取数据失败,你的网络不靠谱呀</string>
    <string name="alter">你没有输入任何东西哟</string>
    <string name="noContent">你没有输入消息哟!</string>
    <string name="loadingFailed">加载失败，点击重新加载</string>
    <string name="person_info">详细资料</string>
    <string name="latest">近期动态</string>
    <string name="action_appwidget_item_on_click" translatable="false">com.mredrock.cyxbs.action.ON_APPWIDGET_ITEM_ONCLICK</string>
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="action_done">完成</string>
    <string name="photo_unit">张</string>
    <string name="tip_take_photo">拍摄照片</string>
    <string name="schedule">我的课表</string>
    <string name="news">我的动态</string>
    <string name="foods">周边美食</string>
    <string name="date">没课约</string>
    <string name="send">发送</string>
    <string name="lost_post">失物启事</string>
    <string name="found_post">招领启事</string>
    <string name="lost_and_found">失物招领</string>
    <string-array name="lost_category_list">
        <item>全部</item>
        <item>一卡通</item>
        <item>钱包</item>
        <item>钥匙</item>
        <item>电子产品</item>
        <item>钥匙</item>
        <item>雨伞</item>
        <item>衣物</item>
        <item>其他</item>
    </string-array>
    <string name="electric_notice_info">\t注意事项\n\n\t抄表日期： </string>
    <string name="electric_notice_info_1">\t用电过程中，如需查询请致电：\t023-62487902</string>
    <string name="unLoginHint">点击登录,拯救课表菌！！！</string>
    <string name="empty_course">没课的日子总是充满对课堂的思恋</string>
    <string-array name="dormitory_buildings">
        <item>知行苑1舍(01栋)</item>
        <item>知行苑2舍(02栋)</item>
        <item>知行苑3舍(03栋)</item>
        <item>知行苑4舍(04栋)</item>
        <item>知行苑5舍(05栋)</item>
        <item>知行苑6舍(06栋)</item>
        <item>知行苑7舍(15栋)</item>
        <item>知行苑8舍(16栋)</item>

        <item>兴业苑1舍(17栋)</item>
        <item>兴业苑2舍(18栋)</item>
        <item>兴业苑3舍(19栋)</item>
        <item>兴业苑4舍(20栋)</item>
        <item>兴业苑5舍(21栋)</item>
        <item>兴业苑6舍(22栋)</item>
        <item>兴业苑7舍(23A栋)</item>
        <item>兴业苑8舍(23B栋)</item>

        <item>四海苑1舍(36栋)</item>
        <item>四海苑2舍(37栋)</item>

        <item>宁静苑1舍(08栋)</item>
        <item>宁静苑2舍(09栋)</item>
        <item>宁静苑3舍(10栋)</item>
        <item>宁静苑4舍(11栋)</item>
        <item>宁静苑5舍(12栋)</item>
        <item>宁静苑6舍(32栋)</item>
        <item>宁静苑7舍(33栋)</item>
        <item>宁静苑8舍(34栋)</item>
        <item>宁静苑9舍(35栋)</item>

        <item>明理苑1舍(24栋)</item>
        <item>明理苑2舍(25栋)</item>
        <item>明理苑3舍(26栋)</item>
        <item>明理苑4舍(27栋)</item>
        <item>明理苑5舍(28栋)</item>
        <item>明理苑6舍(29栋)</item>
        <item>明理苑7舍(30栋)</item>
        <item>明理苑8舍(31栋)</item>
        <item>明理苑9舍(39栋)</item>
    </string-array>
    <string-array name="dormitory_buildings_api">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>15</item>
        <item>16</item>

        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23A</item>
        <item>23B</item>

        <item>36</item>
        <item>37</item>

        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>

        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>39</item>
    </string-array>
    <string name="volunteer_account"></string>
    <string name="volunteer_password"></string>
    <string name="question_detail_title">求助详情</string>
    <string name="question_detail_ignore">忽略</string>
    <string name="question_detail_help">帮助</string>
    <string name="question_detail_add_reward">加价</string>
    <string name="question_detail_cancel_question">取消提问</string>
    <string name="question_detail_report">举报</string>
    <string name="question_detail_share">分享</string>
    <string name="question_detail_more">更多</string>
    <string name="question_detail_question_reward">积分</string>
    <string name="question_detail_answer_count">个回答</string>
    <string name="question_detail_sort_by_default">默认排序</string>
    <string name="question_detail_sort_by_time">按时间排序</string>
    <string name="question_detail_accepted">已采纳</string>
    <string name="question_detail_accept">采纳</string>
    <string name="question_detail_no_answer_helper">快来成为第一个帮助者吧~</string>
    <string name="question_detail_no_answer_questioner">\t\t暂时还没有同学回答\n有新的回答会及时通知哒~</string>
    <string name="answer_question_title">提供帮助</string>
    <string name="answer_question_hint">请尽可能给出明确的解决思路哦!</string>
    <string name="answer_max_length">300</string>
    <string name="answer_detail_praise">点赞</string>
    <string name="answer_detail_title">回答详情</string>
    <string name="answer_detail_comment">评论</string>
    <string name="answer_detail_submit">发送</string>
    <string name="answer_detail_content_hint">添加你的评论</string>
    <string name="fragment_user_empty_username">请填写用户名</string>
    <string name="fragment_user_empty_introduce">写下你对世界想说的话，就现在</string>
    <string name="draft_empty">还没有草稿在这里哦~</string>
    <string name="draft_menu_edit">编辑</string>
    <string name="report_title_type">请选择举报原因</string>
    <string name="report_title_content">请输入具体投诉原因（选填）</string>
    <string name="report_submit">提交</string>
    <string name="report_hint_content">请输入内容</string>
    <string name="sign_remind_switch_hint">连续签到每日提醒</string>
    <string name="sign_point_hint">我的积分数：</string>
    <string name="sign_point_detail">积分明细</string>
    <string name="sign_day_hint">已连续签到</string>
    <string name="sign_point_count_default">0</string>
    <string name="sign_day_count_default">00</string>
    <string name="sign_day_count_hint">天</string>
    <string name="sign_to_sign">立即签到</string>
    <string name="sign_hint_signed">今天打卡任务已完成，你还要忙着可爱</string>
    <string name="sign_rules">签到规则</string>
    <string name="sign_point_spec">积分说明</string>
    <string name="sign_rules_rules">
        1.每天完成一次签到可获得积分奖励；\n
        2.连续签到在3天、5天、7天可获得积分加成；\n
        3.连续签到中断，将从第一天重新开始；\n
        4.积分计分周期为7天；\n
        5.连续签到奖励如下：\n
        第1天 —— +10\n
        第2天 —— +10\n
        第3天 —— +20\n
        第4天 —— +10\n
        第5天 —— +30\n
        第6天 —— +10\n
        第7天 —— +40
    </string>
</resources>