<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/question_detail_bg"
    tools:context=".ui.activity.qa.QuestionDetailActivity"
    tools:ignore="RtlHardcoded">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mredrock.cyxbs.ui.widget.JToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_toolbar"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="enterAlways|scroll|snap"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/answer_detail_title" />
    </android.support.design.widget.AppBarLayout>

    <com.jude.easyrecyclerview.EasyRecyclerView
        android:id="@+id/easyRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.v7.widget.CardView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_behavior="com.mredrock.cyxbs.ui.widget.FooterBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/praise"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/praiseIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_answer_detail_unfavor"
                    android:drawablePadding="8dp"
                    android:text="@string/answer_detail_praise"
                    android:textColor="@color/question_detail_footer"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/praiseNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/question_detail_footer"
                    android:textSize="14sp"
                    tools:text="(26)" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="31dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/question_detail_footer_divider" />

            <LinearLayout
                android:id="@+id/comment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_answer_detail_comment"
                    android:drawablePadding="8dp"
                    android:text="@string/answer_detail_comment"
                    android:textColor="@color/question_detail_footer"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/commentNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/question_detail_footer"
                    android:textSize="14sp"
                    tools:text="(15)" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000" />
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>